# hooksff

./: .minpackver.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  requirements.txt  setup.cfg  test-requirements.txt
.circleci/: config.yml
.github/workflows/: codeql.yml  devskim.yml  linting.yml  ossar.yml
src/hooksff/: __init__.py
tests/: test_hooksff.py
