[metadata]
name = hooksff
version = attr: hooksff.__version__
description = Hooks for functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koviubi56/hooksff
author = Koviubi56
author_email = koviubi56@duck.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = hooksff, hook, hooks
project_urls =
    Documentation = https://github.com/koviubi56/hooksff/wiki
    Release notes = https://github.com/koviubi56/hooksff/blob/main/CHANGELOG.md
    Source = https://github.com/koviubi56/hooksff
    Bug Tracker = https://github.com/koviubi56/hooksff/issues

[options]
packages =
    hooksff
install_requires =
    typing-extensions>=3.10.0.0
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.package_data]
hooksff = py.typed

[pycodestyle]
ignore = E203

[pylama]
ignore = W503

[flake8]
extend-ignore = S101,W503
extend-exclude = venv,*cache*
per-file-ignores =
    tests/*: S101

[isort]
profile = black
